# dcc012-arquivos-rhuannascimento

./: CMakeLists.txt  README.md
src/: config.h  siga.cc
tests/: CMakeLists.txt
tests/data/: new_estudantes.csv
